--- a/debian/rules
+++ b/debian/rules
@@ -48,6 +48,10 @@ override_dh_install:
 	# adding initramfs-tools integration
 	install -D -m 0755 debian/local/fuse.hook debian/fuse3/usr/share/initramfs-tools/hooks/fuse
 
+    # Compress man pages since newer meson >= 0.49 does not.
+	gzip -9 debian/tmp/usr/share/man/man1/fusermount3.1 || true
+	gzip -9 debian/tmp/usr/share/man/man8/mount.fuse3.8 || true
+
 override_dh_auto_test:
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 	ln -sf ../obj-x86_64-linux-gnu/example/hello example/hello
